@@ -1,3 +1,5 @@
-HEAD  -
+HEAD  -  Added option for additional direct PDF links primarily for
+         mobiles/tablets that PDF.js might not always work for due
+         to limited memory and/or processor speed.
 
 0.12  -  Beta release.
